# Leon112211.github.io

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js  打开个人网站.vbs
.codex/skills/build-academic-portfolio/: SKILL.md
.codex/skills/build-academic-portfolio/agents/: openai.yaml
assets/: SoftAurora-7eGmHV2q.js  SoftAurora-BMKF_-AP.js  SoftAurora-BYXQS-nE.js  SoftAurora-Bdu7N0PT.js  SoftAurora-BhN7H-zX.js  SoftAurora-C1e2ynw_.js  SoftAurora-CIGumePn.js  SoftAurora-CTqG5FWq.js  SoftAurora-Chachxix.css  SoftAurora-DN9Ko5ho.js  SoftAurora-DZKPADNJ.js  SoftAurora-DplHGmzc.js  SoftAurora-GhSSa3aZ.js  SoftAurora-VTQnbyJY.js  SoftAurora-lXigok4f.js  SoftAurora-wuxdWaef.js  index-2hTw1t1J.js  index-32m73anX.css  index-B6huxZMQ.css  index-B72H_gmd.js  index-B8g3XSy_.js  index-BJloxiIT.js  index-BTRRuFdg.js  index-BThHxeJs.js  index-BYRTNlkW.css  index-BcKXoab4.css  index-BlujuPl3.js  index-BrdaFuqB.css  index-C0uTSG63.js  index-CeeMAF7h.js  index-CjoyYEQ7.js  index-CnmYPjzX.css  index-D96nogV-.css  index-DITTw09m.css  index-DITuYwgS.css  index-DMjLWdGe.js  index-DRv3qhjF.js  index-DiCabTy3.js  index-DoVp6D1v.js  index-Dx-11rW0.css  (+4 more)
src/: App.jsx  PageTransition.jsx  main.jsx  projectData.js  siteMotion.js  styles.css  theme-dark.css
src/components/: LogoLoop.css  LogoLoop.jsx  SpotlightCard.css  SpotlightCard.jsx
src/components/BorderGlow/: BorderGlow.css  BorderGlow.jsx
src/components/Lanyard/: Lanyard.css  Lanyard.jsx
src/components/Masonry/: Masonry.css  Masonry.jsx
src/components/PillNav/: PillNav.css  PillNav.jsx
src/components/SoftAurora/: SoftAurora.jsx
项目素材/MEC202/: .gitignore  README.txt
项目素材/RM/gary_controller-main/: CMakeLists.txt  gary_controller.xml  package.xml
项目素材/RM/gary_controller-main/include/gary_controller/: calibration_controller.hpp  dual_loop_pid_controller.hpp  dual_loop_pid_controller_with_filter.hpp  hardware_monitor.hpp  pid_controller.hpp  pid_controller_with_filter.hpp
项目素材/RM/gary_controller-main/src/: calibration_controller.cpp  dual_loop_pid_controller.cpp  dual_loop_pid_controller_with_filter.cpp  hardware_monitor.cpp  pid_controller.cpp  pid_controller_with_filter.cpp
项目素材/RM/gary_gimbal-main/gary_gimbal-main/: CMakeLists.txt  package.xml
项目素材/RM/gary_gimbal-main/gary_gimbal-main/include/gary_gimbal/: gimbal_autonomous.hpp  gimbal_control.hpp  gimbal_teleop.hpp
项目素材/RM/gary_gimbal-main/gary_gimbal-main/src/: gimbal_autonomous.cpp  gimbal_control.cpp  gimbal_teleop.cpp
